update De Hierberg

--- a/content/en/news/10.trancedancedehierberg.md
+++ b/content/en/news/10.trancedancedehierberg.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: Trancedans @ De Hierberg
-desc: Monthly Trance dance sessions in De Hierberg te Nukerke (Maarkedal)
+desc: Trance dance session in De Hierberg te Nukerke (Maarkedal)
 date: 09/12/2023
 author: Wouter Vernaillen
 thumb_video: /images/news/trancedancemusic/pexels-cottonbro-10556703.mp4
@@ -16,14 +16,9 @@ category: trance
 
 ## New: Trance dance @ De Hierberg
 
-After a pleasant time-out and a beautiful summer, we will start again with monthly trance dance sessions.
-These will now take place every first Monday of the month in [De Hierberg](https://www.hierberg.be/) in Nukerke (Maarkedal).
+After a pleasant time-out and a beautiful summer, we will start again with trance dance sessions.
+The first one will take place in [De Hierberg](https://www.hierberg.be/) in Nukerke (Maarkedal) on Monday October 2, 2023 at 7 p.m.
 Facilitators are [Karien 'Iztacitlal' Detavernier](https://www.shamanour.be/autobiografie) and [Wouter Vernaillen](/en/about).
-
-Dates for autumn 2023:
-* Monday, October 2, 2023 at 7 p.m
-* Monday, November 6, 2023 at 7 p.m
-* Monday, December 4, 2023 at 7 p.m
 
 Is Trance dance new to you? Then take a look at our [Trance Dance page](/en/trancedance).
 
