--- a/content/news/10.trancedancedehierberg.md
+++ b/content/news/10.trancedancedehierberg.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: Trancedans in De Hierberg
-desc: Maandelijkse Trancedans sessies in De Hierberg te Nukerke (Maarkedal)
+desc: Trancedans sessie in De Hierberg te Nukerke (Maarkedal)
 date: 09/12/2023
 author: Wouter Vernaillen
 thumb_video: /images/news/trancedancemusic/pexels-cottonbro-10556703.mp4
@@ -16,14 +16,9 @@ category: trance
 
 ## Nieuw: Trancedans in De Hierberg
 
-Na een deugddoende time-out en mooie zomer, starten we binnenkort opnieuw met maandelijkse trancedans sessies.
-Deze zullen voortaan elke eerste maandag van de maand doorgaan in [De Hierberg](https://www.hierberg.be/) te Nukerke (Maarkedal).
+Na een deugddoende time-out en mooie zomer, starten we binnenkort opnieuw met trancedans sessies.
+De eerste zal door gaan op maandag 2 oktober 2023 om 19u in [De Hierberg](https://www.hierberg.be/) te Nukerke (Maarkedal).
 Facilitators zijn [Karien 'Iztacitlal' Detavernier](https://www.shamanour.be/autobiografie) en [Wouter Vernaillen](/about).
-
-Data voor het najaar van 2023:
-* Maandag 2 oktober 2023 om 19u
-* Maandag 6 november 2023 om 19u
-* Maandag 4 december 2023 om 19u
 
 Is Trancedans nieuw voor jou?  Neem dan gerust een kijkje op onze [Trancedans pagina](/trancedance).
 
