properly display 404 message

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -15,7 +15,8 @@
     },
     "nav": {
         "gotopage": "Go to page ",
-        "back": "Back"
+        "back": "Back",
+        "backToHome": "Back Home"
     },
     "news": {
         "title": "News",
