moved cottonbro video from news to trancedance folder

--- a/content/news/10.trancedancedehierberg.md
+++ b/content/news/10.trancedancedehierberg.md
@@ -5,10 +5,10 @@ title: Trancedans in De Hierberg
 desc: Trancedans sessie in De Hierberg te Nukerke (Maarkedal)
 date: 09/12/2023
 author: Wouter Vernaillen
-thumb_video: /images/news/trancedancemusic/pexels-cottonbro-10556703.mp4
+thumbnail: /images/trancedance/pexels-cottonbro-studio-10556667.jpg
 header:
     image: /images/trancedance/trancedans-header2.png
-    video: /images/news/trancedancemusic/pexels-cottonbro-10556703.mp4
+    video: /images/trancedance/pexels-cottonbro-10556703.mp4
 category: trance
 ---
 
