Trancedans The Passion of your Dreams

--- a/content/en/news/10.trancedancedehierberg.md
+++ b/content/en/news/10.trancedancedehierberg.md
@@ -30,7 +30,7 @@ For Monday October 2 we are preparing dance and music around the theme "Dance yo
 
 ## Registration
 
-Because places are limited, we ask that you register in advance by sending a message to [Wouter](/contact).
+Because places are limited, we ask that you register in advance by sending a message to [Wouter](/en/contact).
 
 We propose an amount between 33 and 44 euros as a contribution, depending on your financial situation.
 You can bring the amount in cash on the evening itself or transfer it to Harmonics account number BE70 7370 3835 2025, stating your name and the date of the trance dance.
