location De Ringelwikke

--- a/content/en/news/12.trancedancethepassionofyourdreams.md
+++ b/content/en/news/12.trancedancethepassionofyourdreams.md
@@ -74,6 +74,14 @@ imageShadow: true
 * bottle of water
 * possibly a pen and paper to write down your experiences after the dance
 
+## Location
+
+Landelijke Steinerschool 
+De Ringelwikke
+Elzeelsesteenweg 647
+7890 Ronse
+:GoogleMapsDeRingelwikke
+
 :::
 :::div{.col-clear}
 :::
