--- a/content/news/12.trancedancethepassionofyourdreams.md
+++ b/content/news/12.trancedancethepassionofyourdreams.md
@@ -74,6 +74,13 @@ imageShadow: true
 * flesje water
 * eventueel pen en papier om na de dans je ervaringen te noteren
 
+## Locatie
+
+Landelijke Steinerschool 
+De Ringelwikke
+Elzeelsesteenweg 647
+7890 Ronse
+:GoogleMapsDeRingelwikke
 
 :::
 :::div{.col-clear}
