better fix header on mobile

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -67,7 +67,7 @@
         "no": "No need"
     },
     "sessions": {
-        "planned": "Planned {category} sessions autumn 2023",
+        "planned": "Planned {category} sessions",
         "singleCategory": "These are only the planned {category} sessions. You can find an overview of all sessions on the ",
         "allCats": "You can find an overview of all sessions on the ",
         "newsPage": "news page"
