--- a/content/en/news/13.xtaticdanceronse-orientaljourney.md
+++ b/content/en/news/13.xtaticdanceronse-orientaljourney.md
@@ -30,9 +30,7 @@ Share this invitation with all dance lovers
 
 :HorizontalRule{category=ecstatic}
 
-€20 presale
-€23 at the event
-With fresh drink included
+€20 presale<br>€23 at the event<br>With fresh drink included
 
 Tickets via Matty 0484237847
 
