--- a/content/news/13.xtaticdanceronse-orientaljourney.md
+++ b/content/news/13.xtaticdanceronse-orientaljourney.md
@@ -28,9 +28,7 @@ Deel deze uitnodiging met alle dansliefhebbers
 
 :HorizontalRule{category=ecstatic}
 
-20€ vvk via Matty (0484237847)
-23€ aan de kasse
-Vers drankje inbegrepen
+20€ vvk via Matty<br>23€ aan de kassa<br>Vers drankje inbegrepen
 
 Tickets via Matty 0484237847
 
