dynamic seo meta description

--- a/content-disabled/news/11.astateoftrance.md
+++ b/content-disabled/news/11.astateoftrance.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: Wat is Trance?
-desc: 
+description: 
 date: 09/12/2023
 author: Wouter Vernaillen
 category: trance
