--- a/content/02.ecstaticdance.md
+++ b/content/02.ecstaticdance.md
@@ -1,5 +1,6 @@
 ---
 title: Ecstatic Dance
+description: Ontdek wat Ecstatic Dance is en wat het aanbod is van Harmonics
 language: nl
 navigation:
     enabled: true
