--- a/content/98.cookiepolicy.md
+++ b/content/98.cookiepolicy.md
@@ -1,5 +1,6 @@
 ---
 title: Cookie Beleid
+description: Lees hoe we met cookies om gaan als je deze site bezoekt
 language: nl
 navigation: 
     enabled: false
