--- a/content/99.privacypolicy.md
+++ b/content/99.privacypolicy.md
@@ -1,5 +1,6 @@
 ---
 title: Privacy Beleid
+description: Lees hoe we met jouw privacy om gaan als je deze site bezoekt
 language: nl
 navigation: 
     enabled: false
