--- a/content/en/01.index.md
+++ b/content/en/01.index.md
@@ -1,6 +1,6 @@
 ---
 title: Harmonics
-desc: Healing power of Sound, Music & Dance
+description: Healing power of Sound, Music & Dance
 language: en
 header:
     image: /images/about/180515129_10159575628071098_1199375658397273382_n.jpg
