--- a/content/en/02.ecstaticdance.md
+++ b/content/en/02.ecstaticdance.md
@@ -1,5 +1,6 @@
 ---
 title: Ecstatic Dance
+description: Discover what is Ecstatic Dance and what Harmonics is organising
 language: en
 navigation:
     enabled: true
