--- a/content/en/07.about.md
+++ b/content/en/07.about.md
@@ -1,5 +1,6 @@
 ---
 title: About Wouter
+description: Learn more about Harmonics and it's founder Wouter Vernaillen
 language: en
 navigation:
     enabled: true
