--- a/content/en/98.cookiepolicy.md
+++ b/content/en/98.cookiepolicy.md
@@ -1,5 +1,6 @@
 ---
 title: Cookie Policy
+description: Learn how we handle cookies when you visit this website
 language: en
 navigation: 
     enabled: false
