--- a/content/en/99.privacypolicy.md
+++ b/content/en/99.privacypolicy.md
@@ -1,5 +1,6 @@
 ---
 title: Privacy Policy
+description: Learn how we protect your privacy when you visit this website
 language: en
 navigation: 
     enabled: false
