--- a/content/en/news/01.watisecstaticdance.md
+++ b/content/en/news/01.watisecstaticdance.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: What is Ecstatic Dance?
-desc: a form of dance in which the dancers abandon themselves to the rhythm and move freely, as the music leads them...
+description: a form of dance in which the dancers abandon themselves to the rhythm and move freely, as the music leads them...
 date: 07/18/2022
 author: Wouter Vernaillen
 thumb_video: /images/ecstaticdance/ed.mp4
