--- a/content/en/news/02.rebirthecstaticdance.md
+++ b/content/en/news/02.rebirthecstaticdance.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: Rebirth Ecstatic Dance
-desc: recording of an Ecstatic Dance DJ-set played during a private birthday/rebirth event
+description: recording of an Ecstatic Dance DJ-set played during a private birthday/rebirth event
 date: 07/21/2022
 author: Wouter Vernaillen
 thumbnail: /images/news/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
