--- a/content/en/news/03.releaseyourinnerdancer.md
+++ b/content/en/news/03.releaseyourinnerdancer.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: Release your Inner Dancer
-desc: When did you last dance barefoot in the grass in nature? Release your inner child and dance with us on September 3rd in Haaltert
+description: When did you last dance barefoot in the grass in nature? Release your inner child and dance with us on September 3rd in Haaltert
 subtitle: When was the last time you danced barefoot in the grass in nature?
 date: 08/23/2022
 author: Wouter Vernaillen
