--- a/content/en/news/04.foli.md
+++ b/content/en/news/04.foli.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: Foli
-desc: Life has a rhythm, it’s constantly moving. The word for rhythm ( used by the Malinke tribes ) is FOLI.
+description: Life has a rhythm, it’s constantly moving. The word for rhythm ( used by the Malinke tribes ) is FOLI.
 date: 09/08/2022
 author: Wouter Vernaillen
 thumbnail: /images/news/foli/foli.png
