--- a/content/en/news/05.trancedance23january2023.md
+++ b/content/en/news/05.trancedance23january2023.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: Trance Dance January 23
-desc: On January 23 we start with the first of a series of monthly Trance Dance sessions at vzw Dwarsligger in Melle
+description: On January 23 we start with the first of a series of monthly Trance Dance sessions at vzw Dwarsligger in Melle
 date: 01/13/2023
 author: Wouter Vernaillen
 thumbnail: /images/news/trancedance23january2023/fbevent-cover2.jpeg
