--- a/content/en/news/06.trancedance20february2023.md
+++ b/content/en/news/06.trancedance20february2023.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: Trance Dance 20 February
-desc: We love to invite you on 20 February for the next Trance Dance session at vzw Dwarsligger in Melle.
+description: We love to invite you on 20 February for the next Trance Dance session at vzw Dwarsligger in Melle.
 date: 02/09/2023
 author: Wouter Vernaillen
 thumbnail: /images/news/trancedance20february2023/event-cover-20februari.png
