--- a/content/en/news/07.trancedancemusic.md
+++ b/content/en/news/07.trancedancemusic.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: Trance Dance Music
-desc: Are you new to trancedance and curious what music we dance on during a trancedance session? Or maybe you do have some trancedance experience but would love to know how a Harmonics trancedance session sounds like?
+description: Are you new to trancedance and curious what music we dance on during a trancedance session? Or maybe you do have some trancedance experience but would love to know how a Harmonics trancedance session sounds like?
 date: 02/10/2023
 author: Wouter Vernaillen
 thumb_video: /images/trancedance/pexels-cottonbro-10556703.mp4
