--- a/content/en/news/08.gajumarabyyaima.md
+++ b/content/en/news/08.gajumarabyyaima.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: Gajumara by Yaima
-desc: Why this song means so much to me
+description: Why this song means so much to me
 date: 08/23/2023
 author: Wouter Vernaillen
 thumbnail: /images/news/gajumara/yaima.png
