--- a/content/en/news/10.trancedancedehierberg.md
+++ b/content/en/news/10.trancedancedehierberg.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: Trancedans @ De Hierberg
-desc: Trance dance session in De Hierberg te Nukerke (Maarkedal)
+description: Trance dance session in De Hierberg te Nukerke (Maarkedal)
 date: 09/12/2023
 author: Wouter Vernaillen
 thumbnail: /images/trancedance/pexels-cottonbro-studio-10556667.jpg
