--- a/content/en/news/12.fullmooncacaoecstaticsimplybe.md
+++ b/content/en/news/12.fullmooncacaoecstaticsimplybe.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: "Full Moon ~ Cacao ~ Ecstatic Dance"
-desc: Join us on Sunday afternoon 25 February at Simply Be in Brakel
+description: Join us on Sunday afternoon 25 February at Simply Be in Brakel
 date: 02/20/2024
 author: Wouter Vernaillen
 thumbnail: /images/news/fullmoonsimplybe/fullmoon25febsimplybe.png
