--- a/content/en/news/13.xtaticdanceronse-orientaljourney.md
+++ b/content/en/news/13.xtaticdanceronse-orientaljourney.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: "Xtatic dance Ronse: Oriental Journey"
-desc: Let’s Celebrate life 2gether on Sun-day 28/4 @ de Ringelwikke Ronse
+description: Let’s Celebrate life 2gether on Sun-day 28/4 @ de Ringelwikke Ronse
 date: 04/18/2024
 author: Wouter Vernaillen
 thumbnail: /images/news/xtaticdanceronse28april2024/xtaticronse28april-a1.jpg
