--- a/content/news/01.watisecstaticdance.md
+++ b/content/news/01.watisecstaticdance.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: Wat is Ecstatic Dance?
-desc: een dansvorm waarin de dansers zich volledig overgeven aan het ritme van de muziek en vrij bewegen...
+description: een dansvorm waarin de dansers zich volledig overgeven aan het ritme van de muziek en vrij bewegen...
 date: 07/18/2022
 author: Wouter Vernaillen
 thumb_video: /images/ecstaticdance/ed.mp4
