--- a/content/news/03.releaseyourinnerdancer.md
+++ b/content/news/03.releaseyourinnerdancer.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: Release Your Inner Dancer
-desc: Wanneer danste je laatst op blote voeten in het gras in de natuur?  Laat je innerlijke kind vrij en dans met ons mee op 3 september in Haaltert
+description: Wanneer danste je laatst op blote voeten in het gras in de natuur?  Laat je innerlijke kind vrij en dans met ons mee op 3 september in Haaltert
 subtitle: Wanneer danste je laatst op blote voeten in het gras in de natuur?
 date: 08/23/2022
 author: Wouter Vernaillen
