--- a/content/news/04.foli.md
+++ b/content/news/04.foli.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: Foli
-desc: Het leven heeft een ritme, het is constant in beweging. Het woord voor ritme (gebruikt door de Malinke-stammen) is FOLI.
+description: Het leven heeft een ritme, het is constant in beweging. Het woord voor ritme (gebruikt door de Malinke-stammen) is FOLI.
 date: 09/08/2022
 author: Wouter Vernaillen
 thumbnail: /images/news/foli/foli.png
