--- a/content/news/05.trancedance23january2023.md
+++ b/content/news/05.trancedance23january2023.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: Trancedans 23 januari
-desc: Op 23 januari starten we met de eerste van een reeks maandelijkse Trancedans sessies bij vzw Dwarsligger in Melle
+description: Op 23 januari starten we met de eerste van een reeks maandelijkse Trancedans sessies bij vzw Dwarsligger in Melle
 date: 01/13/2023
 author: Wouter Vernaillen
 thumbnail: /images/news/trancedance23january2023/fbevent-cover2.jpeg
