--- a/content/news/07.trancedancemusic.md
+++ b/content/news/07.trancedancemusic.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: Trancedans Muziek
-desc: Is trancedans nieuw voor jou en ben je benieuwd naar de muziek waarop gedanst wordt bij zo’n trancedans sessie? Of misschien heb je wel al ervaring met trancedans en wil je graag weten ontdekken hoe de muziek van een sessie bij Harmonics klinkt?
+description: Is trancedans nieuw voor jou en ben je benieuwd naar de muziek waarop gedanst wordt bij zo’n trancedans sessie? Of misschien heb je wel al ervaring met trancedans en wil je graag weten ontdekken hoe de muziek van een sessie bij Harmonics klinkt?
 date: 02/10/2023
 author: Wouter Vernaillen
 thumb_video: /images/trancedance/pexels-cottonbro-10556703.mp4
