--- a/content/news/08.gajumarabyyaima.md
+++ b/content/news/08.gajumarabyyaima.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: Gajumara by Yaima
-desc: Waarom dit lied zoveel voor me betekent
+description: Waarom dit lied zoveel voor me betekent
 date: 08/23/2023
 author: Wouter Vernaillen
 thumbnail: /images/news/gajumara/yaima.png
