--- a/content/news/10.trancedancedehierberg.md
+++ b/content/news/10.trancedancedehierberg.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: Trancedans in De Hierberg
-desc: Trancedans sessie in De Hierberg te Nukerke (Maarkedal)
+description: Trancedans sessie in De Hierberg te Nukerke (Maarkedal)
 date: 09/12/2023
 author: Wouter Vernaillen
 thumbnail: /images/trancedance/pexels-cottonbro-studio-10556667.jpg
