--- a/content/news/11.trancedancethepassionofyourdreams.md
+++ b/content/news/11.trancedancethepassionofyourdreams.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: "Trancedans: The Passion of your Dreams"
-desc: Trancedans sessie op maandagavond 4 december in De Ringelwikke in Ronse
+description: Trancedans sessie op maandagavond 4 december in De Ringelwikke in Ronse
 date: 11/21/2023
 author: Wouter Vernaillen
 thumb_video: /images/trancedance/pexels-cottonbro-10556698.mp4
