--- a/content/news/12.fullmooncacaoecstaticsimplybe.md
+++ b/content/news/12.fullmooncacaoecstaticsimplybe.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: "Volle Maan ~ Cacao ~ Ecstatic Dance"
-desc: Kom mee genieten op zondagnamiddag 25 februari vanaf 15u bij Simply Be in Brakel
+description: Kom mee genieten op zondagnamiddag 25 februari vanaf 15u bij Simply Be in Brakel
 date: 02/20/2024
 author: Wouter Vernaillen
 thumbnail: /images/news/fullmoonsimplybe/fullmoon25febsimplybe.png
