--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -20,6 +20,7 @@
     },
     "news": {
         "title": "News",
+        "description": "Stay up to date about the upcoming ecstatic dance & trance dance sessions.",
         "readmore": "read more",
         "findoutmore": "find out more",
         "by": "by",
