--- a/content/en/news/09.thedanceofmyawakeningsoul.md
+++ b/content/en/news/09.thedanceofmyawakeningsoul.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: The Dance of my Awakening Soul
-desc: A Conscious Healing Dance from Dark into Light into Colour<br>~ a project by Sofie AF De Smet ~<br><br>Sat September 23 at 7pm
+description: A Conscious Healing Dance from Dark into Light into Colour<br>~ a project by Sofie AF De Smet ~<br><br>Sat September 23 at 7pm
 date: 09/03/2023
 author: Wouter Vernaillen
 thumbnail: /images/news/awakeningsoul/898d86_07074b7c09d14c9abca3df6168ae93b1f000.jpg
