--- a/content/en/news/11.trancedancethepassionofyourdreams.md
+++ b/content/en/news/11.trancedancethepassionofyourdreams.md
@@ -2,7 +2,7 @@
 isNews: true
 language: en
 title: "Trance Dance: The Passion of your Dreams"
-desc: Trance Dance sesson on Monday December 4 at De Ringelwikke in Ronse
+description: Trance Dance sesson on Monday December 4 at De Ringelwikke in Ronse
 date: 11/21/2023
 author: Wouter Vernaillen
 thumb_video: /images/trancedance/pexels-cottonbro-10556698.mp4
