--- a/content/news/02.rebirthecstaticdance.md
+++ b/content/news/02.rebirthecstaticdance.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: Rebirth Ecstatic Dance
-desc: opname van een Ecstatic Dance DJ-set gespeeld tijdens een privé verjaardags/rebirth evenement
+description: opname van een Ecstatic Dance DJ-set gespeeld tijdens een privé verjaardags/rebirth evenement
 date: 07/21/2022
 author: Wouter Vernaillen
 thumbnail: /images/news/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
