--- a/content/news/06.trancedance20february2023.md
+++ b/content/news/06.trancedance20february2023.md
@@ -2,7 +2,7 @@
 isNews: true
 language: nl
 title: Trancedans 20 februari
-desc: Op 20 februari nodigen we jullie graag opnieuw uit voor een Trancedans sessie bij vzw Dwarsligger te Melle.
+description: Op 20 februari nodigen we jullie graag opnieuw uit voor een Trancedans sessie bij vzw Dwarsligger te Melle.
 date: 02/09/2023
 author: Wouter Vernaillen
 thumbnail: /images/news/trancedance20february2023/event-cover-20februari.png
