--- a/locales/nl-BE.json
+++ b/locales/nl-BE.json
@@ -20,6 +20,7 @@
     },
     "news": {
         "title": "Nieuws",
+        "description": "Blijf op de hoogte van de komende ecstatic dance & trance dance sessies",
         "readmore": "lees meer {locale}",
         "findoutmore": "ontdek meer",
         "by": "door",
