--- a/content/07.about.md
+++ b/content/07.about.md
@@ -1,6 +1,6 @@
 ---
 title: Over Wouter
-descripttion: Ontdek Harmonics en de oprichter Wouter Vernaillen
+description: Ontdek Harmonics en de oprichter Wouter Vernaillen
 language: nl
 navigation:
     enabled: true
