--- a/content/en/news/13.xtaticdanceronse-orientaljourney.md
+++ b/content/en/news/13.xtaticdanceronse-orientaljourney.md
@@ -6,6 +6,7 @@ description: Let’s Celebrate life 2gether on Sun-day 28/4 @ de Ringelwikke Ron
 date: 04/18/2024
 author: Wouter Vernaillen
 thumbnail: /images/news/xtaticdanceronse28april2024/xtaticronse28april-a1.jpg
+ogImage: /images/news/xtaticdanceronse28april2024/xtaticronse28april-a1.jpg
 header:
     image: /images/news/xtaticdanceronse28april2024/shutterstock_46754929.jpg
 category: ecstatic
