--- a/content/en/news/12.fullmooncacaoecstaticsimplybe.md
+++ b/content/en/news/12.fullmooncacaoecstaticsimplybe.md
@@ -8,6 +8,9 @@ author: Wouter Vernaillen
 thumbnail: /images/news/fullmoonsimplybe/fullmoon25febsimplybe.png
 header:
     image: /images/news/fullmoonsimplybe/fullmoon25febsimplybe-header.png
+ogImage:
+    props:
+        image: /images/news/fullmoonsimplybe/fullmoon25febsimplybe.png
 category: ecstatic
 ---
 
