--- a/content/news/11.trancedancethepassionofyourdreams.md
+++ b/content/news/11.trancedancethepassionofyourdreams.md
@@ -9,6 +9,11 @@ thumb_video: /images/trancedance/pexels-cottonbro-10556698.mp4
 header:
     image: /images/trancedance/trancedans-header2.png
     video: /images/trancedance/pexels-cottonbro-10556698.mp4
+ogImage:
+    width: 2000
+    props:
+        width: 2000
+        image: /images/trancedance/trancedans-header2.png
 category: trance
 ---
 
