extatic ipv xtatic

--- a/content/news/13.extaticdanceronse-orientaljourney.md
+++ b/content/news/13.extaticdanceronse-orientaljourney.md
@@ -1,7 +1,7 @@
 ---
 isNews: true
 language: nl
-title: "Xtatic dance Ronse: Oriental Journey"
+title: "Extatic dance Ronse: Oriental Journey"
 description: Let’s Celebrate life 2gether on Sun-day 28/4 @ de Ringelwikke Ronse
 date: 04/18/2024
 author: Wouter Vernaillen
@@ -16,7 +16,7 @@ category: ecstatic
 
 :::div{.col-left}
 
-# Xtatic dance Ronse - zondag 28 april
+# Extatic dance Ronse - zondag 28 april
 Let’s Celebrate life 2gether op Zon-dag 28/4 @ de Ringelwikke Ronse 🌙🪬☀️
 
 Wees welkom op deze Extatic dance ~ start 15u-18u einde
