Een evenement van Matty

--- a/content/en/news/13.extaticdanceronse-orientaljourney.md
+++ b/content/en/news/13.extaticdanceronse-orientaljourney.md
@@ -16,6 +16,8 @@ category: ecstatic
 
 :::div{.col-left}
 
+An event by [Matty aka Xtatic Rootsman](https://www.levensboomtherapie.be/klanktherapie/extatic-dance-events/)
+
 # Extatic dance Ronse - zondag 28 april
 
 Let’s Celebrate life 2gether on Sun-day 28/4 @ de Ringelwikke Ronse 🌙🪬☀️
@@ -33,9 +35,7 @@ Share this invitation with all dance lovers
 
 :HorizontalRule{category=ecstatic}
 
-€20 presale<br>€23 at the event<br>With fresh drink included
-
-Tickets via Matty 0484237847
+€20 presale via Matty 0484237847<br>€23 at the event<br>With fresh drink included
 
 Doors 14u30
 
