--- a/content/news/13.extaticdanceronse-orientaljourney.md
+++ b/content/news/13.extaticdanceronse-orientaljourney.md
@@ -16,24 +16,26 @@ category: ecstatic
 
 :::div{.col-left}
 
+Een evenement van [Matty aka Xtatic Rootsman](https://www.levensboomtherapie.be/klanktherapie/extatic-dance-events/)
+
 # Extatic dance Ronse - zondag 28 april
 Let’s Celebrate life 2gether op Zon-dag 28/4 @ de Ringelwikke Ronse 🌙🪬☀️
 
-Wees welkom op deze Extatic dance ~ start 15u-18u einde
+Op zondag 28/4 staat een bijzondere Extatic Dance gepland te Ronse @ Steinerschool De Ringelwikke.
 
-Een Oosterse reis naar binnen begeleid door Dj Harmonics (Wouter)
+East meets West ~ An Oriental musical journey inwards guided by DJ Harmonics (Wouter) & [Xtatic Rootsman](https://www.levensboomtherapie.be/klanktherapie/extatic-dance-events/) (openingscirkel).
 
-Blootvoets dansen zonder woorden noch drugs ~ afstemmen op het vreugdevolle deel van onze ziel ~ Verbinden en eren van "thé Great Spirit" die we allemaal erven
+De namiddag krijgt een accent van Oosterse & Midden-Oosterse muziek maar ook andere zalige gevarieerde dansmuziek want Wouter kijkt er alvast naar uit om opnieuw in Ronse te komen draaien.
 
-‘Wervelend, dansend of chillend ~ naar ons hart luisteren we’
+'Dancing, whirling or chilling ~ to our heart we are listening'
+
+Dans blootvoets, zonder woorden in connectie met onze innerlijke vreugde
 
 Deel deze uitnodiging met alle dansliefhebbers
 
 :HorizontalRule{category=ecstatic}
 
-20€ vvk via Matty<br>23€ aan de kassa<br>Vers drankje inbegrepen
-
-Tickets via Matty 0484237847
+20€ vvk via Matty 0484237847<br>23€ aan de kassa<br>Vers drankje inbegrepen
 
 Doors 14u30
 
