temp hidden cacao dance

--- a/content-disabled/news/14.cacaodance.md
+++ b/content-disabled/news/14.cacaodance.md
@@ -1,8 +1,8 @@
 ---
 isNews: true
 language: nl
-title: Cacao Dance @ Hoeve Wabi Sabi
-description: blote voeten dans op 18 september
+title: Cacao Dance ~ 18 september
+description: blote voeten dans bij Hoeve Wabi Sabi in Staden
 date: 09/05/2024
 author: Wouter Vernaillen
 thumbnail: /images/news/cacaodance/hoevewabisabi.jpg
@@ -18,7 +18,7 @@ category: ecstatic
 
 * 18 september
 https://www.cacaosoulfood.com/
-https://www.facebook.com/events/1587962002136195/
+https://www.facebook.com/events/881898100662496
 
 ::FloatingImage
 ---
