Ecstatic New Year Dance Ronse

--- a/content/en/news/14.extaticdanceronse12januari2024.md
+++ b/content/en/news/14.extaticdanceronse12januari2024.md
@@ -1,7 +1,7 @@
 ---
 isNews: true
 language: en
-title: "Extatic Dance Ronse 12/1"
+title: "Ecstatic New Year Dance Ronse"
 description: Sunday afternoon January 12 - with DJ Harmonics (Wouter Vernaillen)
 date: 12/29/2024
 author: Wouter Vernaillen
@@ -31,14 +31,13 @@ Blissful organic and authentic dj sets
 
 Pre-sale tickets available at €20
 
-Price at the event €23 (including fresh healthy drink)
+Price at the event €23 (incl. fresh healthy drinks)
 
 Children (-12y) who want to dance are welcome for a voluntary contribution
 
-If you have difficulty with the entrance fee, please contact Matty at 0484237847
+If you have difficulty with the entrance fee, please contact me (Matty 0484237847)
 
-We aim for small quality events but we also want to cover our costs each time
-
+Last minute decisions are also welcome, there is plenty of space at this beautiful hilltop location
 
 *"Dance without words for more harmony"*
 
