--- a/content/news/14.extaticdanceronse12januari2024.md
+++ b/content/news/14.extaticdanceronse12januari2024.md
@@ -1,7 +1,7 @@
 ---
 isNews: true
 language: nl
-title: "Extatic Dance Ronse 12/1"
+title: "Ecstatic New Year Dance Ronse"
 description: Zondagnamiddag 12 januari - met DJ Harmonics (Wouter Vernaillen)
 date: 12/29/2024
 author: Wouter Vernaillen
@@ -32,13 +32,13 @@ zalige organische authentieke dj sets
 
 Voorverkoop tickets verkrijgbaar aan €20 
 
-Prijs op het event zelf €23 (incl. fresh healthy drink)
+Prijs op het event zelf €23 (incl. fresh healthy drinks)
 
 Kinderen (-12j) die graag meedansen welkom aan vrije bijdrage
 
-Wie moeite heeft qua budget voor de inkom, gelieve Matty te contacteren op 0484237847
+Wie moeite heeft qua budget voor de inkom, gelieve mij te contacteren (Matty 0484237847)
 
-We staan voor kleine kwalitatieve events maar we wensen ook telkens uit de kosten te geraken
+Ook last minute beslissingen, iedereen welkom er is plek genoeg op deze mooie heuveltop locatie
 
 *"Dance without words for more harmony"*
 
