--- a/content/en/news/14.extaticdanceronse12januari2024.md
+++ b/content/en/news/14.extaticdanceronse12januari2024.md
@@ -41,6 +41,15 @@ Last minute decisions are also welcome, there is plenty of space at this beautif
 
 *"Dance without words for more harmony"*
 
+## Program
+
+15u30 herbal smudging
+16u   opening circle
+17u45 soundhealing
+18u   closing circle 
+
+*Grounding in the here & now by Raising our energy*
+
 ## Locatie
 
 Landelijke Steinerschool 
