--- a/content/news/14.extaticdanceronse12januari2024.md
+++ b/content/news/14.extaticdanceronse12januari2024.md
@@ -42,6 +42,15 @@ Ook last minute beslissingen, iedereen welkom er is plek genoeg op deze mooie he
 
 *"Dance without words for more harmony"*
 
+## Programma
+
+15u30 herbal smudging
+16u   opening circle
+17u45 soundhealing
+18u   closing circle 
+
+*Grounding in the here & now by Raising our energy*
+
 ## Locatie
 
 Landelijke Steinerschool 
