--- a/content-disabled/05.soundhealing.md
+++ b/content-disabled/05.soundhealing.md
@@ -1,8 +1,8 @@
 ---
 title: Sound Healing
-language: en
+language: nl
 navigation:
-    enabled: false
+    enabled: true
 category: sound
 header:
     video: /images/soundhealing/pexels-ekaterina-bolovtsova-6768064-cropped.mp4
@@ -18,6 +18,18 @@ page under construction
 :::div{.col-right}
 
 :PlannedSessions{category=sound class=no-sliding}
+
+
+## Gevolgde opleidingen
+
+- Surya module 1
+- Surya module 2
+- Sound Healing Bali - module 1 - November 2024
+
+in progress:
+- Butterfly Circles (Iris Pattyn) - jaartraject 2025
+- Sound Healing Bali - module 2 - July 2025
+
 
 :::
 :::div{.col-clear}
