--- a/content/02.trancemovement.md
+++ b/content/02.trancemovement.md
@@ -1,6 +1,6 @@
 ---
-title: Trancedans
-description: Wat is Trancedans?
+title: Trance Movement™
+description: Wat is Trance Movement™?
 language: nl
 navigation:
     enabled: true
@@ -13,9 +13,9 @@ category: trance
 
 > Let's enter the darkness, dance with our shadows ...and set them free.
 
-## Wat is Trancedans?
+## Wat is Trance Movement™?
 
-Trancedans is een hedendaagse **geblinddoekte, meditatieve, vrije dans** gecreëerd door Frank Natale en Wilbert Alix, geïnspireerd door sjamanistische tradities van meer dan 40.000 jaar oud.
+Trance Movement™ is een hedendaagse **geblinddoekte, meditatieve, vrije dans** gecreëerd door Frank Natale en Wilbert Alix, geïnspireerd door sjamanistische tradities van meer dan 40.000 jaar oud.
 
 Door geblinddoekt te dansen en geen visuele prikkels binnen te laten, zak je gemakkelijker in je lichaam en worden andere gewaarwordingen sterker. 
 Al dansend komen we uit ons hoofd, in ons lichaam en maken we een **innerlijke reis**. Zo kan Trancedans helpen om beperkende conditioneringen los te laten en trauma's gericht naar boven te brengen en te verwerken. 
