--- a/content/en/02.trancemovement.md
+++ b/content/en/02.trancemovement.md
@@ -1,6 +1,6 @@
 ---
-title: Trance Dance
-description: What is Trancedans?
+title: Trance Movement™
+description: What is Trance Movement™?
 language: en
 navigation:
     enabled: true
@@ -13,12 +13,12 @@ category: trance
 
 > Let's enter the darkness, dance with our shadows ...and set them free.
 
-## What is Trance Dance?
+## What is Trance Movement™?
 
-Trance dance is a contemporary **blindfolded, meditative, free dance** created by Frank Natale and Wilbert Alix, inspired by shamanic traditions over 40,000 years old.
+Trance Movement™ is a contemporary **blindfolded, meditative, free dance** created by Frank Natale and Wilbert Alix, inspired by shamanic traditions over 40,000 years old.
 
 By dancing blindfolded and no longer letting visual stimuli in, you can sink into your body more easily and other sensations become stronger. 
-While dancing we come out of our head, into our body and make an **inner journey**. Trance Dance can help to release limiting believes, and consiously bring traumas to the surface so we can start to process them.
+While dancing we come out of our head, into our body and make an **inner journey**. Trance Movement™ can help to release limiting believes, and consiously bring traumas to the surface so we can start to process them.
 
 You can start the dance with a specific **intention**, an insight you are willing to receive, something to process, or simply to celebrate life.
 There are no fixed steps, you move freely and dance your own dance from within your inner self. 
