migrate to nuxt content v3

--- a/content/02.trancemovement.md
+++ b/content/02.trancemovement.md
@@ -2,8 +2,7 @@
 title: Trance Movement™
 description: Wat is Trance Movement™?
 language: nl
-navigation:
-    enabled: true
+nav: true
 header:
     video: /images/trancedance/pexels-cottonbro-10556690.mp4
 category: trance
