--- a/content/03.ecstaticdance.md
+++ b/content/03.ecstaticdance.md
@@ -2,8 +2,7 @@
 title: Ecstatic Dance
 description: Ontdek wat Ecstatic Dance is en wat het aanbod is van Harmonics
 language: nl
-navigation:
-    enabled: true
+nav: true
 header:
     video: /images/ecstaticdance/ed.mp4
     modifiers: { crop: '70px400@0x8p' }
