--- a/content/06.news.md
+++ b/content/06.news.md
@@ -2,8 +2,7 @@
 title: Nieuws
 description: Harmonics nieuws
 language: nl
-navigation:
-    enabled: true
+nav: true
 header:
     image: /images/news/pexels-maria-tyutina-2058495-2.png
 ---
