--- a/content/en/01.index.md
+++ b/content/en/01.index.md
@@ -4,9 +4,8 @@ description: Healing power of Sound, Music & Dance
 language: en
 header:
     image: /images/about/180515129_10159575628071098_1199375658397273382_n.jpg
-navigation:
-    enabled: true
-    icon: 'i-mdi-home'
+nav: true
+navIcon: 'i-mdi-home'
 ---
 
 :HomeLogo{class=no-sliding}
