--- a/content/en/02.trancemovement.md
+++ b/content/en/02.trancemovement.md
@@ -2,8 +2,7 @@
 title: Trance Movement™
 description: What is Trance Movement™?
 language: en
-navigation:
-    enabled: true
+nav: true
 header:
     video: /images/trancedance/pexels-cottonbro-10556690.mp4
 category: trance
