--- a/content/en/03.ecstaticdance.md
+++ b/content/en/03.ecstaticdance.md
@@ -2,8 +2,7 @@
 title: Ecstatic Dance
 description: Discover what is Ecstatic Dance and what Harmonics is organising
 language: en
-navigation:
-    enabled: true
+nav: true
 header:
     video: /images/ecstaticdance/ed.mp4
     modifiers: { crop: '70px500@0x20p' }
