--- a/content/en/06.news.md
+++ b/content/en/06.news.md
@@ -2,8 +2,7 @@
 title: News
 description: Harmonics news
 language: en
-navigation:
-    enabled: true
+nav: true
 header:
     image: /images/news/pexels-maria-tyutina-2058495-2.png
 ---
