--- a/content/en/07.about.md
+++ b/content/en/07.about.md
@@ -2,8 +2,7 @@
 title: About Wouter
 description: Learn more about Harmonics and it's founder Wouter Vernaillen
 language: en
-navigation:
-    enabled: true
+nav: true
 header:
     image: /images/about/180515129_10159575628071098_1199375658397273382_n.jpg
 ---
