--- a/content/en/08.contact.md
+++ b/content/en/08.contact.md
@@ -2,8 +2,7 @@
 title: Contact
 description: Send a message to Harmonics
 language: en
-navigation:
-    enabled: true
+nav: true
 header:
     image: /images/about/180515129_10159575628071098_1199375658397273382_n.jpg
 ---
