--- a/content/07.about.md
+++ b/content/07.about.md
@@ -2,8 +2,7 @@
 title: Over Wouter
 description: Ontdek Harmonics en de oprichter Wouter Vernaillen
 language: nl
-navigation:
-    enabled: true
+nav: true
 header:
     image: /images/about/180515129_10159575628071098_1199375658397273382_n.jpg
 ---
